--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -7,6 +7,7 @@
     tools:context="com.jorgereina.jpmc.DetailsActivity">
 
     <LinearLayout
+        android:id="@+id/details_school_info_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -17,24 +18,63 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/details_test_takers_tv"
+            android:id="@+id/details_email_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/details_average_reading_score_tv"
+            android:id="@+id/details_address_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/details_average_math_score_tv"
+            android:id="@+id/details_city_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/details_average_writing_score_tv"
+            android:id="@+id/details_phone_number_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <ProgressBar
+            android:id="@+id/details_pb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/details_sat_layout">
+
+            <TextView
+                android:id="@+id/details_test_takers_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/no_info_available" />
+
+            <TextView
+                android:id="@+id/details_average_reading_score_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/no_info_available" />
+
+            <TextView
+                android:id="@+id/details_average_math_score_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/no_info_available" />
+
+            <TextView
+                android:id="@+id/details_average_writing_score_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/no_info_available" />
+        </LinearLayout>
     </LinearLayout>
+
+
 
 </android.support.v7.widget.CardView>
