--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -10,71 +10,90 @@
         android:id="@+id/details_school_info_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/details_layout_padding">
 
         <TextView
             android:id="@+id/details_school_name_tv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="@dimen/text_size_30sp" />
 
         <TextView
             android:id="@+id/details_email_tv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_20sp" />
 
         <TextView
             android:id="@+id/details_address_tv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_20sp" />
 
         <TextView
             android:id="@+id/details_city_tv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_20sp" />
 
         <TextView
             android:id="@+id/details_phone_number_tv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_20sp" />
+
+        <TextView
+            android:id="@+id/details_sat_title_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/padding_20dp"
+            android:text="@string/details_sat_information_title"
+            android:textAlignment="center"
+            android:textSize="@dimen/text_size_30sp" />
 
         <ProgressBar
             android:id="@+id/details_pb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
 
         <LinearLayout
+            android:id="@+id/details_sat_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/details_sat_layout">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/details_test_takers_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/no_info_available" />
+                android:text="@string/no_info_available"
+                android:textSize="@dimen/text_size_20sp" />
 
             <TextView
                 android:id="@+id/details_average_reading_score_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/no_info_available" />
+                android:text="@string/no_info_available"
+                android:textSize="@dimen/text_size_20sp" />
 
             <TextView
                 android:id="@+id/details_average_math_score_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/no_info_available" />
+                android:text="@string/no_info_available"
+                android:textSize="@dimen/text_size_20sp" />
 
             <TextView
                 android:id="@+id/details_average_writing_score_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/no_info_available" />
+                android:text="@string/no_info_available"
+                android:textSize="@dimen/text_size_20sp" />
         </LinearLayout>
     </LinearLayout>
-
 
 
 </android.support.v7.widget.CardView>
