--- a/app/src/main/res/layout/school_item.xml
+++ b/app/src/main/res/layout/school_item.xml
@@ -8,12 +8,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/card_padding_5dp">
 
         <TextView
             android:id="@+id/main_school_name_tv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_20sp"/>
 
         <TextView
             android:id="@+id/main_email_tv"
