--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="card_margin_5dp">5dp</dimen>
+    <dimen name="card_padding_5dp">5dp</dimen>
+    <dimen name="text_size_20sp">20sp</dimen>
+    <dimen name="text_size_30sp">30sp</dimen>
+    <dimen name="padding_20dp">20dp</dimen>
+    <dimen name="details_layout_padding">10dp</dimen>
 </resources>
